problemas con endpoints
